# NppFTP.macos

./: .gitignore  CMakeLists.txt
src/engine/: FTPCache.cpp  FTPClientWrapperSSH.cpp  FTPProfile.cpp  FTPSession.cpp  FTPSettings.cpp  FTPWindow.h  InputDialog.h  KBIntDialog.h  MessageDialog.h  Monitor.cpp  Monitor.h  Notify.h  Output.cpp  PathUtils.cpp  Prompts.cpp  QueueOperation.cpp  StdInc.h  UIProvider.h
src/engine/UTCP/: UTDataSource.cpp  UT_StrOp.cpp  stdafx.h  ut_clnt.cpp  ut_clnt.h  ut_strop.h  uterr.h  utfile.cpp
src/mac/: mac_fs.h  mac_fs.mm  win_compat.cpp  win_compat.h  win_file.h  win_path.h  win_thread.h
src/ui/: FTPWindowController.h  FTPWindowController.mm  NppFTPPlugin.mm  ProfileDialog.mm
tests/: run_profiles.sh  test_engine.cpp  test_globals.cpp  test_profiles.cpp
